--- a/Reading/css/allworks.css
+++ b/Reading/css/allworks.css
@@ -1,11 +1,11 @@
 /*图标*/
 @font-face {
   font-family: 'iconfont';  /* project id 870868 */
-  src: url('//at.alicdn.com/t/font_870868_3wka1203pvv.eot');
-  src: url('//at.alicdn.com/t/font_870868_3wka1203pvv.eot?#iefix') format('embedded-opentype'),
-  url('//at.alicdn.com/t/font_870868_3wka1203pvv.woff') format('woff'),
-  url('//at.alicdn.com/t/font_870868_3wka1203pvv.ttf') format('truetype'),
-  url('//at.alicdn.com/t/font_870868_3wka1203pvv.svg#iconfont') format('svg');
+  src: url('//at.alicdn.com/t/font_870868_tjyrr7y2c3.eot');
+  src: url('//at.alicdn.com/t/font_870868_tjyrr7y2c3.eot?#iefix') format('embedded-opentype'),
+  url('//at.alicdn.com/t/font_870868_tjyrr7y2c3.woff') format('woff'),
+  url('//at.alicdn.com/t/font_870868_tjyrr7y2c3.ttf') format('truetype'),
+  url('//at.alicdn.com/t/font_870868_tjyrr7y2c3.svg#iconfont') format('svg');
 }
 .iconfont{
     font-family:"iconfont" !important;
@@ -56,9 +56,11 @@ ul,li{
 		width:240px !important;
 	}
 } 
-
 .worksmain a{
 	cursor: pointer;
+}
+.worksmain a:link,.worksmain a:visited{
+	text-decoration: none;
 }
 .worksmain a:hover{
 	color: #ed4259;
@@ -107,15 +109,35 @@ ul,li{
 	margin-bottom: 10px;
 	color: #262626;
 }
-.worksmain_aside_selected a{
-	
+.worksmain_aside_selected_item{
+	margin-bottom: 15px;
+	width: 100%;
+}
+.worksmain_aside_selected_item a{
+	margin-bottom: 5px;
+	display: inline-block;
+}
+.close-icon{
+	font-size: 12px !important;
+}
+.select_type,.all_type{
+	padding: 2px 4px;
+	margin-right: 5px;
+	background: #ed4259;
+	border: 1px solid #ed4259;
+	color: #FFFFFF !important;
+}
+.all_type{
+	cursor: default !important;
+}
+.select_type:hover,.all_type:hover{
+	color: #FFFFFF !important; 
 }
 .worksmain_aside_selected span{
 	padding: 0px 4px;
 	border: 1px solid #ed4259;
 	background: #ed4259;
 	color: #FFFFFF;
-	margin-bottom: 15px;
 	display: inline-block;
 }
 .worksmain_aside_selectlist{
@@ -145,12 +167,29 @@ ul,li{
 }
 .li_down{
 	position: absolute;
-	top: 55px;
+	left: 50%;
+	width: 0;
+	height: 0;
+	border-style: solid;
+	border-width: 0 5px 5px 5px;
+	z-index: 2;
+	border-color: transparent transparent #f7f6f2 transparent;
 }
-
-
-
-
+.li_down_list{
+	width: 100%;
+	border-radius: 3px;
+	/*border: 1px solid #666666;*/
+	background: #f7f6f2;
+	padding: 10px;
+	margin-top: 5px;
+	z-index: 1;
+}
+.li_down_list p a{
+	padding-right: 10px;
+}
+.li_down_list_per>ul:not(:last-of-type){
+	margin-bottom: 10px;
+}
 
 
 /*workmain主要部分*/
@@ -165,10 +204,97 @@ ul,li{
 	border-radius: 0px !important;
 	height: 40px;
 	min-height: 40px !important;
+	font-size: 12px;
+	color: #A6A6A6;
 }
 .worksmain_main_head ul li{
-	line-height: 40px;
+	line-height: 38px;
+	padding: 0px;
 }
+.worksmain_main_head ul li a{
+	color: #a6a6a6;
+	padding: 4px 12px;
+}
+.worksmain_main_head ul li .s_down{
+	font-size: 12px !important;
+}
+.head_select a{
+	font-weight: bold;
+}
+.head_select .s_down{
+	font-size: 12px !important;
+}
+.head_select>a,.head_select .s_down{
+	color: #ed4259 !important;
+}
+.head_select>a>.caret{
+	color: #a6a6a6;
+}
+.dr_head{
+	position: relative;
+}
+.dr_head>a{
+	padding: 4px 12px 4px 12px;
+	border: 1px solid transparent;
+	background: #FFFFFF;
+	box-shadow: 0 0 4px rgba(0,0,0,0.2);
+}
+.dr_head>a>.caret{
+	margin-right: 8px;
+}
+.dr_detail{
+	position: absolute;
+	border: 1px solid transparent;
+	background: #FFFFFF;
+	box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+	top:32px;
+}
+.dr_detail li:hover{
+	background: #F7F7F7;
+}
+.dr_detail li a{
+	padding: 3px 12px;
+}
+.dr_detail li:hover a{
+	color: #262626;
+}
+.checkbox-book input{
+	vertical-align: text-bottom;
+	cursor: pointer;
+}
+.checkbox-book label{
+	padding-left: 5px;
+	color: #666;
+	font-size: 12px;
+	font-weight: normal;
+	margin: 0px;
+}
+.checkbox-book label:hover,{
+	color: #262626;
+}
+.head_right{
+	line-height: 38px;
+	vertical-align: top;
+}
+.head_right em{
+	padding: 0px 10px;
+}
+.head_right_view{
+	display: inline-block;
+	vertical-align: top;
+}
+.head_right a{
+	color: #A6A6A6;
+	cursor: pointer;
+}
+.head_right a:hover{
+	color: #666;
+}
+.head_right_view_selected{
+	color: #262626 !important; 
+}
+
+
 .worksmain_main_books{
 	width: 100%;
 }
