--- a/Reading/css/login.css
+++ b/Reading/css/login.css
@@ -10,6 +10,7 @@ header{
 .box-center{
 	width: 1200px;
 	margin: 0 auto;
+	margin-bottom: 100px !important;
 }
 @media (max-width: 1200px){
 .box-center {
@@ -238,6 +239,10 @@ input::-webkit-input-placeholder{
 	width: 198px!important;
 	border: 1px solid #E6E6E6 !important;	
 }
+.txtcode-null{
+	width: 198px!important;
+	border: 1px solid #ED4259 !important;	
+}
 .phone-login input{
 	padding-left: 13px !important;
 }
@@ -309,7 +314,7 @@ input::-webkit-input-placeholder{
 	width: 136px;
 	min-height: 136px;
 	margin: 0 auto;
-	margin-bottom: 24px;
+	margin-bottom: 0px;
 }
 .qr-code p{
 	margin-top: 12px;
@@ -320,4 +325,88 @@ input::-webkit-input-placeholder{
 }
 .qr-code p a:hover{
 	text-decoration: none;
+}
+.saoma{
+	position: absolute;
+	width: 322px;
+	height: 24px;
+	z-index: 1000;
+	background: url(../img/zm-img/lg1.png) no-repeat;
+}
+.qq-icon{
+	text-align: center;
+	padding: 10px 0 50px 0;
+}
+.qq-icon span{
+	display: block;
+	margin: 0 auto;
+	width: 110px;
+	height: 129px;
+	background: url(../img/zm-img/qq.png) no-repeat;
+}
+.login-box2 p{
+	text-align: center;
+	color: #A6A6A6;
+	font-size: 16px;
+	margin-bottom: 20px;
+}
+.login-box2 input{
+	font-size: 14px !important;
+}
+.wx-code{
+	text-align: center;
+}
+.wx-img{
+	width: 200px;
+	margin: 15px auto;
+	border: 1px solid #E2E2E2;
+}
+.wx-info p{
+	text-align: center;
+	margin-bottom: 0 !important;
+}
+.login-box2,.login-box3{
+	display: none;
+}
+.footer{
+	text-align: center;
+	padding-bottom: 20px;
+	background: #FAFAFA;
+}
+.footer p{
+	margin-bottom: 0!important;
+	line-height: 20px;
+	height: 20px;
+	font-size: 12px;
+	color: #A6A6A6;
+	font-family: "PingFangSC-Regular", "-apple-system", Simsun;
+}
+.link{
+	padding-top: 32px;
+	margin-bottom: 10px;
+}
+.link a:link,.link a:visited{
+	color: #666;
+	font-size: 12px;
+	margin-left: 15px;
+	text-decoration: none;	
+}
+.link a:hover{
+	text-decoration: none;	
+	color: #ED4259;
+}
+.safety-box{
+	padding-top: 20px !important;
+}
+.error-tip{
+	position: absolute;
+	display: none;
+	top: 8px;
+	width: 324px;
+	height: 24px;
+	line-height: 24px;
+	text-align: center;
+	font-size: 12px;
+	background: #FFE4E8;
+	color: #ED4259;
 }
