--- a/Reading/css/allworks.css
+++ b/Reading/css/allworks.css
@@ -1,11 +1,11 @@
 /*图标*/
 @font-face {
   font-family: 'iconfont';  /* project id 870868 */
-  src: url('//at.alicdn.com/t/font_870868_tjyrr7y2c3.eot');
-  src: url('//at.alicdn.com/t/font_870868_tjyrr7y2c3.eot?#iefix') format('embedded-opentype'),
-  url('//at.alicdn.com/t/font_870868_tjyrr7y2c3.woff') format('woff'),
-  url('//at.alicdn.com/t/font_870868_tjyrr7y2c3.ttf') format('truetype'),
-  url('//at.alicdn.com/t/font_870868_tjyrr7y2c3.svg#iconfont') format('svg');
+  src: url('//at.alicdn.com/t/font_870868_j7hdap4u4ke.eot');
+  src: url('//at.alicdn.com/t/font_870868_j7hdap4u4ke.eot?#iefix') format('embedded-opentype'),
+  url('//at.alicdn.com/t/font_870868_j7hdap4u4ke.woff') format('woff'),
+  url('//at.alicdn.com/t/font_870868_j7hdap4u4ke.ttf') format('truetype'),
+  url('//at.alicdn.com/t/font_870868_j7hdap4u4ke.svg#iconfont') format('svg');
 }
 .iconfont{
     font-family:"iconfont" !important;
@@ -18,6 +18,7 @@
 *{
 	margin: 0px;
 	padding: 0px;
+	box-sizing: content-box !important;
 }
 body{
 	color: #262626;
@@ -37,6 +38,9 @@ body{
 ul,li{
 	list-style: none;
 }
+.tooltip-inner{
+	width: 120px;
+}
 .worksmain{
 	width: 1200px;
 	margin: 0px auto;
@@ -54,6 +58,10 @@ ul,li{
 	
 	.books_info{
 		width:240px !important;
+	}
+	
+	.worksmain_main_head .head_right>span{
+		display: none;
 	}
 } 
 .worksmain a{
@@ -155,7 +163,7 @@ ul,li{
 .selectlist_per_li_selected a:hover{
 	color: #FFFFFF;
 }
-.worksmain_aside_selectlist_per{
+.worksmain_aside_selectlist_per:not(:last-of-type){
 	border-bottom: 1px solid #ebebeb;
 	margin-bottom: 10px;
 }
@@ -164,6 +172,12 @@ ul,li{
 }
 .worksmain_aside_selectlist_per ul li a{
 	position: relative;
+}
+.worksmain_aside_selectlist_per ul .more_type a{
+	color: #3f5a93;
+}
+.worksmain_aside_selectlist_per ul .more_type a:hover{
+	color: #2972cc;
 }
 .li_down{
 	position: absolute;
@@ -191,6 +205,9 @@ ul,li{
 	margin-bottom: 10px;
 }
 
+.main-nav-wrap .main-nav li a:hover{
+	text-decoration: none;
+}
 
 /*workmain主要部分*/
 .worksmain_main{
@@ -198,7 +215,7 @@ ul,li{
 }
 
 .worksmain_main_head{
-	width: 930px;
+	width: 100%;
 	padding: 0px 12px;
 	background: #f7f6f2;
 	border-radius: 0px !important;
@@ -206,6 +223,7 @@ ul,li{
 	min-height: 40px !important;
 	font-size: 12px;
 	color: #A6A6A6;
+	box-sizing: border-box !important;
 }
 .worksmain_main_head ul li{
 	line-height: 38px;
@@ -323,7 +341,7 @@ ul,li{
 	margin-top: 5px;
 	margin-bottom: 8px;
 	padding: 0px;
-	font-size: 24px;
+	font-size: 18px;
 	height: 24px;
 }
 .books_info>h4 a{
@@ -346,6 +364,7 @@ ul,li{
 	overflow: hidden;
 	color: #666666;
 	margin-bottom: 8px;
+	font-size: 14px;
 }
 .books_info_words{
 	font-size: 12px;
@@ -355,6 +374,7 @@ ul,li{
 .worksmain_main_page_list ul li{
 	height: 24px;
 	color: #262626;
+	font-size: 14px;
 }
 .worksmain_main_page_list ul li a{
 	padding: 2px 7px;
@@ -364,6 +384,10 @@ ul,li{
 }
 .worksmain_main_page_list ul li a:hover{
 	border: 1px solid #ed4259;
+}
+.a_disabled{
+	pointer-events: none;
+	opacity: 0.5;
 }
 .page_list_thispage{
 	/*height: 24px !important;*/
@@ -386,4 +410,55 @@ ul,li{
 }
 .worksmain_main_page_search a:hover{
 	border: 1px solid #ed4259 !important;
+}
+
+
+/*列表模式*/
+.main_books_list table{
+	margin-bottom: 40px;
+}
+.main_books_list table thead {
+	color: #262626;
+}
+.main_books_list em{
+	font-style: normal;
+}
+.main_books_list table tbody tr td{
+	border-bottom: 1px solid #E6E6E6;
+}
+.main_books_list table tbody tr td{
+	height: 40px;
+}
+.main_books_list table tbody tr:hover{
+	background: #f7f6f2;
+}
+.td_booktype,.td_bookname,.td_newsection{
+	font-size: 14px;
+}
+.td_booktype a{
+	color: gray;
+}
+.td_bookname a,.td_newsection a,.td_author a{
+	display: block;
+}
+.td_bookname a{
+	color: #262626;
+}
+.td_newsection a{
+	color: #666666;
+}
+.td_newsection a:hover{
+	color: #262626;
+}
+.td_bookwords{
+	color: gray;
+}
+.td_author a{
+	color: gray;
+}
+.td_author a:hover{
+	color: #262626;
+}
+.td_bookdate{
+	color: #666666;
 }
