--- a/Reading/css/index.css
+++ b/Reading/css/index.css
@@ -6,6 +6,16 @@ a {
 a:hover {
     color: #ed4259;
 }
+.blue {
+    color: #3f5a93;
+}
+.blue:hover {
+    color: #2972cc;
+}
+table {
+    border-spacing: 0;
+    border-collapse: collapse;
+}
 .red {
     color: #bf2c24;
 }
@@ -14,6 +24,9 @@ a:hover {
 }
 .mb40{
 	margin-bottom: 40px;
+}
+.mb33{
+	margin-bottom: 33px;
 }
 .mb30{
 	margin-bottom: 30px;
@@ -1663,4 +1676,660 @@ h3.wrap-title i {
     overflow: hidden;
     height: 16px;
     color: #666;
+}
+.left-wrap {
+    width: 954px;
+}
+@media (max-width: 1200px){
+	.left-wrap {
+	    width: 736px;
+	}	
+}
+.left-wrap .wrap-title {
+    font-size: 0.22rem;
+    line-height: 27px;
+    margin-top: -2px;
+    padding-bottom: 6px;
+}
+.left-wrap .wrap-title span {
+    font: 0.12rem/0.2rem PingFangSC-Regular,HelveticaNeue-Light,'Helvetica Neue Light','Microsoft YaHei',sans-serif;
+    display: inline-block;
+    margin-top: 4px;
+    margin-left: 8px;
+    vertical-align: middle;
+    color: #3f5a93;
+}
+.left-wrap .wrap-title span {
+    color: #666;
+}
+.left-wrap .left-info {
+    overflow: hidden;
+    width: 216px;
+    height: 395px;
+    background: #f7f5f0;
+}
+.left-wrap .left-info .slide-box {
+    position: relative;
+    z-index: 1;
+    height: 120px;
+    padding: 40px 0 0 48px;
+}
+.left-wrap .left-info .read-btn {
+    margin: 0 auto;
+}
+.center-book-list {
+    position: relative;
+    width: 738px;
+}
+@media (max-width: 1200px){
+	.left-wrap .center-book-list {
+	    width: 520px;
+	}	
+}
+.center-book-list .line.line1 {
+    top: 138px;
+}
+.center-book-list .line.line2 {
+    top: 276px;
+}
+.center-book-list .line {
+    position: absolute;
+    left: 30px;
+    width: 708px;
+}
+@media (max-width: 1200px){
+	.left-wrap .center-book-list .line {
+	    width: 490px;
+	}	
+}
+.center-book-list ul {
+    position: relative;
+    overflow: hidden;
+    width: 738px;
+    height: 375px;
+    padding: 20px 0 0 30px;
+}
+@media (max-width: 1200px){
+	.left-wrap .center-book-list ul {
+	    width: 700px;
+	}	
+}
+.center-book-list ul li {
+    float: left;
+    width: 339px;
+    height: 96px;
+    margin: 0 30px 43px 0;
+}
+@media (max-width: 1200px){
+	.left-wrap .center-book-list li {
+	    width: 234px;
+	    margin-right: 22px;
+	}	
+}
+.center-book-list ul li .book-img,
+.center-book-list ul li .book-info {
+    float: left;
+}
+.book-img {
+    width: 72px;
+    height: 96px;
+    margin-right: 12px;
+}
+.book-img a img:hover {
+    transform: scale(1.1);
+}
+.center-book-list ul li .book-info {
+    width: 255px;
+}
+@media (max-width: 1200px){
+	.left-wrap .center-book-list li .book-info {
+	    width: 150px;
+	}	
+}
+.center-book-list ul li .book-info h3 {
+    font: 0.16rem/0.21rem PingFangSC-Regular,HelveticaNeue-Light,'Helvetica Neue Light','Microsoft YaHei',sans-serif;
+    overflow: hidden;
+    height: 21px;
+    margin-top: -3px;
+    margin-bottom: 8px;
+}
+.center-book-list ul li .book-info p {
+    font: 0.12rem/0.2rem PingFangSC-Regular,'-apple-system',Simsun;
+    overflow: hidden;
+    height: 40px;
+    margin-bottom: 10px;
+    color: #666;
+}
+.state-box {
+    font-family: PingFangSC-Regular,'-apple-system',Simsun;
+    font-size: 0.12rem;
+    line-height: 0.18rem;
+}
+.state-box i,
+.state-box span {
+    float: right;
+    overflow: hidden;
+    padding: 0 3px;
+    text-align: center;
+    border-radius: 1px;
+}
+.state-box span {
+    max-width: 62px;
+    height: 18px;
+    color: #bf2c24;
+    border: 1px solid #df9591;
+}
+.state-box i {
+    max-width: 52px;
+    height: 18px;
+    margin-right: 8px;
+    color: #a6a6a6;
+    border: 1px solid #bfbfbf;
+}
+.state-box .author {
+    display: block;
+    overflow: hidden;
+    height: 18px;
+    margin-top: 2px;
+    padding-right: 10px;
+    color: #a6a6a6;
+}
+.state-box img {
+    display: inline-block;
+    width: 14px;
+    height: 14px;
+    margin: -2px 5px 0 0;
+    vertical-align: middle;
+}
+.state-box .author:hover {
+    color: #1a1a1a;
+}
+.book-img a span {
+    font: 12px/18px Arial;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 17px;
+    padding: 0 3px 0 2px;
+    text-align: center;
+    color: #fff;
+    border-radius: 0 5px 0 0;
+    background: #ed4259;
+}
+.right-wrap {
+    position: relative;
+    z-index: 1;
+    width: 216px;
+}
+.right-wrap .book-wrap .book-info p.digital {
+    height: 20px;
+    padding: 4px 0 0;
+}
+.right-wrap .book-wrap .book-info p.digital em {
+    font-size: 0.14rem;
+}
+.finish-book-wrap:hover .more {
+    opacity: 100;
+}
+.score-list .book-wrap .book-info h3 {
+    font: 0.14rem/0.18rem PingFangSC-Regular,'-apple-system',Simsun;
+}
+.score-list .book-wrap .book-info .score {
+    font: 0.12rem/0.16rem PingFangSC-Regular,'-apple-system',Simsun;
+    overflow: hidden;
+    height: 16px;
+    padding: 2px 0;
+    color: #bf2c24;
+}
+.score-list li {
+    border-top: 1px solid #e6e6e6;
+}
+.score-list li .name {
+    font: 0.14rem/0.31rem PingFangSC-Regular,'-apple-system',Simsun;
+    float: left;
+    overflow: hidden;
+    width: 160px;
+    height: 31px;
+}
+.score-list li i {
+    font-family: PingFangSC-Regular,'-apple-system',Simsun;
+    font-size: 0.12rem;
+    float: right;
+    overflow: hidden;
+    width: 46px;
+    height: 16px;
+    margin-top: 8px;
+    text-align: right;
+    color: #a6a6a6;
+}
+.update-wrap .wrap-title {
+    font-size: 0.22rem;
+    position: relative;
+    z-index: 1;
+    overflow: hidden;
+    width: 216px;
+    height: 24px;
+    white-space: nowrap;
+}
+.update-wrap .wrap-title span {
+    font: 0.12rem/0.2rem PingFangSC-Regular,HelveticaNeue-Light,'Helvetica Neue Light','Microsoft YaHei',sans-serif;
+    position: absolute;
+    top: 6px;
+    right: 0;
+    color: #666;
+}
+.update-wrap .god-wrap .god-list,
+.update-wrap .update-rec-list {
+    overflow: hidden;
+    width: 216px;
+    height: 632px;
+    background: #f7f5f0;
+}
+.update-wrap .god-wrap .god-list ul,
+.update-wrap .update-rec-list ul {
+    width: 192px;
+    margin-right: auto;
+    margin-left: auto;
+}
+.update-wrap .god-wrap .god-list ul li,
+.update-wrap .update-rec-list ul li {
+    height: 210px;
+}
+.update-wrap .god-wrap .god-list .book-wrap,
+.update-wrap .update-rec-list .book-wrap {
+    padding: 25px 0 12px;
+}
+.update-wrap .god-wrap .god-list .book-cover,
+.update-wrap .update-rec-list .book-cover {
+    float: left;
+}
+.update-wrap .god-wrap .god-list p.intro,
+.update-wrap .update-rec-list p.intro {
+    font: 0.12rem/0.2rem PingFangSC-Regular,'-apple-system',Simsun;
+    overflow: hidden;
+    height: 60px;
+    color: #666;
+}
+.update-wrap .god-wrap .god-list .book-wrap .book-info,
+.update-wrap .update-rec-list .book-wrap .book-info {
+    margin-top: 22px;
+}
+.update-wrap .god-wrap .god-list .book-wrap .book-info h4,
+.update-wrap .god-wrap .god-list .book-wrap .book-info p,
+.update-wrap .update-rec-list .book-wrap .book-info h4,
+.update-wrap .update-rec-list .book-wrap .book-info p {
+    text-align: right;
+}
+.update-wrap .god-wrap .god-list .book-wrap .book-info .digital,
+.update-wrap .update-rec-list .book-wrap .book-info .digital {
+    font-size: 0;
+    height: 20px;
+}
+.update-wrap .god-wrap .god-list .book-wrap .book-info .digital span,
+.update-wrap .update-rec-list .book-wrap .book-info .digital span {
+    font: 0.12rem/0.2rem PingFangSC-Regular,'-apple-system',Simsun;
+}
+.update-wrap .god-wrap .god-list .book-wrap .book-info .digital i,
+.update-wrap .update-rec-list .book-wrap .book-info .digital i {
+    font: 0.12rem/0.2rem Arial;
+    margin: 0 3px;
+}
+.update-wrap .update-list-wrap {
+    width: 738px;
+    overflow: hidden;
+    height: 660px;
+}
+@media (max-width: 1200px){
+	.update-wrap .update-list-wrap {
+	    width: 530px;
+	}	
+}
+.update-wrap .update-list-wrap .update-tab {
+    height: 24px;
+    padding-bottom: 4px;
+}
+.update-wrap .update-list-wrap .update-tab {
+    border-bottom: 1px solid #666;
+}
+.update-wrap .update-list-wrap .update-tab .blue,
+.update-wrap .update-list-wrap .update-tab p {
+    float: right;
+}
+.update-wrap .update-list-wrap .update-tab a,
+.update-wrap .update-list-wrap .update-tab span {
+    font: 0.12rem/0.16rem PingFangSC-Regular,'-apple-system',Simsun;
+    float: left;
+    margin-top: 7px;
+    color: #a6a6a6;
+}
+.update-wrap .update-list-wrap .update-tab a.blue {
+    color: #3f5a93;
+}
+.update-wrap .update-list-wrap .update-tab a.blue:hover {
+    color: #2972cc;
+}
+.update-wrap .update-list-wrap .update-tab a em.iconfont {
+    font-size: 0.12rem;
+    vertical-align: middle;
+}
+.update-wrap .update-list-wrap .update-tab span {
+    font-family: Arial;
+    font-size: 0.12rem;
+    margin-right: 5px;
+    margin-left: 5px;
+}
+.update-wrap .update-list-wrap .update-tab a.act,
+.update-wrap .update-list-wrap .update-tab a:hover {
+    color: #ed4259;
+}
+.update-wrap .update-list-wrap .update-tab a.act {
+    font-weight: 700;
+}
+.update-wrap .update-list-wrap .update-list {
+    width: 708px;
+    margin-left: 30px;
+}
+@media (max-width: 1200px){
+	.update-wrap .update-list-wrap .update-list {
+	    width: 500px;
+	}	
+}
+.update-wrap .update-list-wrap .update-list table td {
+    height: 31px;
+}
+.update-wrap .update-list-wrap .update-list table td a {
+    float: left;
+    overflow: hidden;
+    height: 30px;
+}
+.update-wrap .update-list-wrap .update-list table td a.classify,
+.update-wrap .update-list-wrap .update-list table td a.name {
+    font: 0.14rem/0.3rem PingFangSC-Regular,'-apple-system',Simsun;
+    color: #1a1a1a;
+}
+.update-wrap .update-list-wrap .update-list table td a.classify {
+    margin-left: -7px;
+    color: grey;
+}
+.update-wrap .update-list-wrap .update-list table td a.classify em {
+    font-family: PingFangSC-Regular,HelveticaNeue-Light,'Helvetica Neue Light','Microsoft YaHei',sans-serif;
+    font-size: 0.13rem;
+}
+.update-wrap .update-list-wrap .update-list table td a:hover {
+    color: #ed4259;
+}
+.update-wrap .update-list-wrap .update-list table td a.author,
+.update-wrap .update-list-wrap .update-list table td a.section {
+    font: 0.12rem/0.3rem PingFangSC-Regular,'-apple-system',Simsun;
+}
+.update-wrap .update-list-wrap .update-list table td a.section {
+    overflow: hidden;
+    max-width: 220px;
+    margin-right: 5px;
+    white-space: normal;
+    text-overflow: ellipsis;
+    color: #666;
+}
+.update-wrap .update-list-wrap .update-list table td a.author:hover,
+.update-wrap .update-list-wrap .update-list table td a.section:hover {
+    color: #1A1A1A;
+}
+@media (max-width: 1200px){
+	.respon {
+	    display: none;
+	}	
+}
+.update-wrap .update-list-wrap .update-list table td a.author {
+    color: #999;
+}
+.update-wrap .update-list-wrap .update-list table td i {
+    font: 0.12rem/1 Arial;
+    float: right;
+    margin-top: 3px;
+    color: #666;
+}
+.update-wrap .update-list-wrap .update-list table td .vip {
+    float: left;
+    width: 21px;
+    height: 12px;
+    margin-top: 9px;
+    background: url(../img/ljs/tag.png) no-repeat 0 0;
+}
+.update-wrap .god-wrap h3.wrap-title {
+    font-size: 0.18rem;
+}
+h3.wrap-title a {
+    font: 0.12rem/1 Arail,PingFangSC-Regular,'-apple-system',Simsun;
+    color: #3f5a93;
+}
+.update-wrap .wrap-title a {
+    margin-left: 87px;
+}
+h3.wrap-title a:hover {
+    color: #2972cc;
+}
+.update-wrap .wrap-title a .more-dashen {
+    font-size: 0.12rem;
+}
+.update-wrap .god-wrap .god-list li {
+    position: relative;
+}
+.update-wrap .god-wrap .god-list .god-info {
+    overflow: hidden;
+    height: 206px;
+}
+.update-wrap .god-wrap .god-list li .photo {
+    position: absolute;
+    top: 15px;
+    right: 0;
+    width: 60px;
+    height: 60px;
+}
+.update-wrap .god-wrap .god-list li .photo img {
+    width: 60px;
+    height: 60px;
+    border-radius: 100%;
+}
+.update-wrap .god-wrap .god-list li h3 {
+    font-size: 0.16rem;
+    padding: 13px 0 5px;
+}
+.update-wrap .god-wrap .god-list li h3 a {
+    display: block;
+    overflow: hidden;
+    width: 128px;
+    height: 21px;
+    color: #1a1a1a;
+}
+.update-wrap .god-wrap .god-list li h3 a:hover {
+    color: #ed4259;
+}
+.update-wrap .god-wrap .god-list li h4,
+.update-wrap .god-wrap .god-list li p {
+    font-family: PingFangSC-Regular,'-apple-system',Simsun;
+    font-size: 0.12rem;
+}
+.update-wrap .god-wrap .god-list li .type {
+    font: 0.12rem/0.16rem PingFangSC-Regular,'-apple-system',Simsun;
+    overflow: hidden;
+    width: 128px;
+    height: 16px;
+    margin-bottom: 10px;
+}
+.update-wrap .god-wrap .god-list li h4 {
+    font-weight: 400;
+    margin-bottom: 5px;
+    color: #999;
+}
+.update-wrap .god-wrap .god-list li .works {
+    overflow: hidden;
+    max-height: 36px;
+    margin-bottom: 14px;
+    color: #3f5a93;
+}
+.update-wrap .god-wrap .god-list li .intro {
+    overflow: hidden;
+    height: 60px;
+}
+.update-wrap .god-wrap .god-list li .works a {
+    line-height: 0.2rem;
+    color: #3f5a93;
+}
+.update-wrap .god-wrap .god-list li .works a:hover {
+    color: #ed4259;
+}
+.update-wrap .god-wrap .god-list li .works span {
+    margin: 0 4px;
+}
+.time-limit-wrap {
+    height: 222px;
+}
+.time-limit-wrap li {
+    position: relative;
+    z-index: 1;
+    float: left;
+    width: 169px;
+    height: 220px;
+    transition: box-shadow .5s;
+    text-align: center;
+}
+.time-limit-wrap li:hover {
+    position: relative;
+    z-index: 3;
+    box-shadow: 0 5px 16px #d9d4c7;
+}
+.time-limit-wrap li:first-of-type:hover {
+    box-shadow: none;
+}
+@media (max-width: 1200px){
+	.time-limit-wrap li {
+	    width: 161px;
+	}	
+}
+.time-limit-wrap li.time-box {
+    width: 172px;
+}
+.time-limit-wrap li.odd {
+    border: 1px solid #f7f6f2;
+    background: #f7f6f2;
+}
+.time-limit-wrap li.even {
+    border: 1px solid #fcfcfa;
+    background: #fcfcfa;
+}
+.time-limit-wrap li.time-box .limit-wrap {
+    padding-top: 25px;
+}
+.time-limit-wrap li.time-box h3 {
+    font-size: 0.18rem;
+    line-height: 0.21rem;
+    overflow: hidden;
+    height: 21px;
+    color: #ed4259;
+    font-weight: 400;
+}
+.time-limit-wrap li.time-box .type {
+    font-family: PingFangSC-Regular,'-apple-system',Simsun;
+    font-size: 12px;
+    overflow: hidden;
+    height: 16px;
+    padding: 2px 0;
+    color: #999;
+}
+.time-limit-wrap li.time-box .iconfont {
+    font-size: 0.60rem;
+    display: block;
+    height: 60px;
+    margin: 6px 0 14px;
+}
+.time-limit-wrap li.time-box .countdown {
+    overflow: hidden;
+    height: 22px;
+    margin-bottom: 10px;
+    color: #bf2c24;
+}
+.time-limit-wrap li.time-box .blue {
+    font-family: PingFangSC-Regular,'-apple-system',Simsun;
+    font-size: 0.14rem;
+    display: block;
+    overflow: hidden;
+    height: 19px;
+    vertical-align: middle;
+}
+.time-limit-wrap li.time-box .blue span {
+    font-family: simsun;
+    font-weight: 700;
+    display: inline-block;
+    margin-top: -2px;
+    margin-left: 5px;
+    vertical-align: middle;
+}
+.time-limit-wrap li.time-box .countdown i {
+    font: 0.18rem/0.21rem Arial;
+}
+.time-limit-wrap li.time-box .countdown em {
+    margin-right: 5px;
+}
+.time-limit-wrap li .book-img {
+    width: 66px;
+    height: 88px;
+    margin: 20px auto 10px;
+}
+.time-limit-wrap li .book-img a {
+    width: 100%;
+    height: 100%;
+}
+.book-img a span {
+    font: 12px/18px Arial;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 17px;
+    padding: 0 3px 0 2px;
+    text-align: center;
+    color: #fff;
+    border-radius: 0 5px 0 0;
+    background: #ed4259;
+}
+.time-limit-wrap li .name {
+    font: 0.16rem/0.21rem PingFangSC-Regular,HelveticaNeue-Light,'Helvetica Neue Light','Microsoft YaHei',sans-serif;
+    display: block;
+    overflow: hidden;
+    height: 21px;
+    padding: 0 10px;
+    color: #1a1a1a;
+}
+.time-limit-wrap li .name:hover {
+    color: #ed4259;
+}
+.time-limit-wrap li s {
+    font: 0.12rem/0.14rem PingFangSC-Regular,'-apple-system',Simsun;
+    display: block;
+    overflow: hidden;
+    height: 14px;
+    margin: 8px 0;
+    color: #999;
+}
+.free-blue-btn {
+    font: 0.14rem/0.29rem PingFangSC-Regular,'-apple-system',Simsun;
+    display: block;
+    overflow: hidden;
+    width: 88px;
+    height: 28px;
+    text-align: center;
+    color: #3f5a93;
+    background-image: url(/qd/images/common/blue_btn.182db.png);
+    background-repeat: no-repeat;
+    background-position: 0 0;
+    background-size: cover;
+}
+.time-limit-wrap li .free-blue-btn {
+    margin: 0 auto;
+    background-image: url(../img/ljs/blue_btn.png);
+}
+.free-blue-btn:hover {
+    transition: none;
+    transition: all 0s;
+    color: #2972cc;
+    background-position: 0 -29px;
 }
