--- a/Reading/css/wms-index.css
+++ b/Reading/css/wms-index.css
@@ -214,7 +214,7 @@ ul.navbar-new > li {
 }
 .metric .number {
     display: block;
-    font-size: 28px;
+    font-size: 25px;
     font-weight: 300;
 }
 .metric .title {
@@ -229,4 +229,87 @@ ul.navbar-new > li {
     fill: #028fd0;
     /*stroke: none;*/
     fill-opacity: 0.3;
+}
+.weekly-summary{
+	margin-bottom: 30px;
+    font-weight: 300;
+}
+.text-right{
+	text-align: right;
+}
+.weekly-summary .number{
+	font-size: 36px;
+}
+.weekly-summary .percentage {
+    position: relative;
+    top: -7px;
+}
+.weekly-summary .info-label {
+    display: block;
+    margin-bottom: 10px;
+    font-weight: normal;
+}
+
+
+/*所有图书信息*/
+.panel-body label input{
+	border-radius: 0;
+	width: 100px !important;
+	margin-left: 5px;
+}
+.panel-body label{
+	margin-right: 10px;
+}
+.panel-body label button{
+	color: grey;
+	border-radius: 0;
+}
+.panel-body table>thead>tr>th{
+	border: 0;
+	text-align: center;
+}
+.panel-body table>tbody>tr>td{
+	border: 0;
+	border-bottom: 1px dotted #E1E1E1!important;
+	text-align: center;
+}
+.panel-body table thead tr{
+	background-color: #E2E2E2;
+}
+.row1{
+	margin-bottom: 40px;
+}
+.ul-type{
+	width: 160px;
+	max-height: 122px;
+	overflow: auto;
+}
+.panel-body p{
+	margin-bottom: 20px !important;
+}
+.panel-body .h{
+	margin-bottom: 20px;
+}
+.panel-body .h .btn-group{
+	margin-right: 10px;
+}
+.book-img{
+	position: absolute;
+	top: 30px;
+	right: 100px;
+	width: 180px;
+	height: 240px;
+	/*background-color: red;*/
+}
+.book-img{
+	width: 180px;
+	height: 240px;
+}
+.add-section{
+	margin: 20px 0;
+}
+.add-section textarea{
+	width: 460px;
+	height: 110px;
+	resize: none;
 }
