--- a/Reading/css/header-footer.css
+++ b/Reading/css/header-footer.css
@@ -76,7 +76,8 @@ p{
 	display: block;
     width: 100%;
     height: 100%;
-    background: url(../img/ljs/logo-big.png) no-repeat;
+    background: url(../img/img_slin/readlogo.png) no-repeat;
+    background-size: cover;
 }
 .hf-header .search-wrap,
 .hf-header .book-shelf{
