--- a/Reading/css/wms-index.css
+++ b/Reading/css/wms-index.css
@@ -98,7 +98,7 @@ ul.navbar-new > li {
 
 /*侧边导航*/
 #sidebar-nav{
-	padding-top: 80px;
+	padding-top: 88px;
 }
 .sidebar{
 	width: 260px;
@@ -288,7 +288,7 @@ ul.navbar-new > li {
 	margin-bottom: 20px !important;
 }
 .panel-body .h{
-	margin-bottom: 20px;
+	margin-bottom: 24px;
 }
 .panel-body .h .btn-group{
 	margin-right: 10px;
@@ -302,14 +302,14 @@ ul.navbar-new > li {
 	/*background-color: red;*/
 }
 .book-img{
-	width: 180px;
-	height: 240px;
+	width: 190px;
+	height: 250px;
+	/*padding: 8px 8px;
+	border: 1px solid #000000;*/
 }
 .add-section{
 	margin: 20px 0;
 }
-.add-section textarea{
-	width: 460px;
-	height: 110px;
+.modal-body textarea{
 	resize: none;
 }
