--- a/Reading/css/freeread.css
+++ b/Reading/css/freeread.css
@@ -1,3 +1,4 @@
+
 *{
 	padding: 0;
 	margin: 0;
@@ -744,8 +745,8 @@ tr a:hover{color: #ed4259;}
 }
 .copy-right-boss>h4{margin-top: 0;border-bottom: 1px solid #e6e6e6;padding-bottom: 10px;font-weight: 700;}
 .writers{float: left;}
-.writer>p{margin-bottom: 0;}
-.writer>span{
+.writers>p{margin-bottom: 0;}
+.writers>span{
 	background: #ed4259;
 	color: white;
 	display: inline-block;
